<resources>
	<string name="app_name">享工作</string>
	<string name="join_worker">join worker</string>

	<string name="navigation_drawer_open">Open navigation drawer</string>
	<string name="navigation_drawer_close">Close navigation drawer</string>

	<string name="location">location</string>

	<string name="load_more">載入中&#8230;</string>

	<string name="server_error">伺服器發生不明錯誤</string>


	<string name="exit_toast_message">再次點擊退出享工作</string>

	<!-- drawer -->
	<string name="drawer_work_list">工作列表</string>
	<string name="drawer_work_history">歷史工作</string>
	<string name="drawer_setting">設定</string>
	<string name="drawer_question">常見問題</string>
	<string name="drawer_about">關於享工作</string>

	<!-- dialog button -->
	<string name="confirm">確定</string>
	<string name="cancel">取消</string>
	<string name="send">送出</string>
	<string name="allow">允許</string>
	<string name="not_allowed">不允許</string>

	<!-- account login -->
	<string name="account">手機號碼</string>
	<string name="password">登入密碼</string>
	<string name="sign_in">立即註冊</string>
	<string name="forget_password">忘記密碼</string>
	<string name="login">登入</string>
	<string name="facebook">Facebook帳號登入</string>
	<string name="account_login">會員登入</string>
	<string name="account_register">會員註冊</string>
	<string name="phone_number_hint">請輸入手機號碼</string>
	<string name="phone_number_size_hint">請輸入正確的手機</string>
	<string name="send_verify_code">發送簡訊至 %1$s</string>
	<string name="verify_codes">輸入6位簡訊驗證碼</string>
	<string name="button_continue">下一步</string>
	<string name="confirm_receive_code">沒收到驗證碼？</string>
	<string name="resend">重新發送</string>
	<string name="phone_number">手機號碼</string>
	<string name="verify_phone_number">簡訊驗證</string>
	<string name="verify_code_hint">請輸入簡訊驗證碼</string>
	<string name="resend_verify_code">驗證碼已重送</string>
	<string name="phone_country_code_style">%1$ss +%2$s</string>
	<string name="register_phone_number">發送驗證碼</string>
	<string name="dialog_is_leave_register">是否離開註冊流程？</string>
	<string name="dialog_is_leave_login">是否離開登入流程？</string>
	<string name="welcome">welcome</string>
	<string name="password_error">兩組密碼輸入不相同</string>
	<string name="send_sms_message">請洽客服人員!</string>
	<string name="send_forget_password_message">簡訊已送出，請輸入簡訊內傳送的新密碼登入</string>

	<string name="register_complete">送出</string>
	<string name="hint_enter_checking_password">再次輸入密碼</string>
	<string name="new_password_hint">輸入密碼，須大於6字元</string>
	<string name="account_register_sub_title">為了個人帳戶安全及下次登入，請修改您的帳號密碼。日後當您更換手機裝置時，透過此帳密登入，即可恢復您帳號內所有資訊。</string>
	<string name="account_register_title">恭喜您通過電話認證！</string>
	<string name="uid_hint">請輸入帳號</string>
	<string name="password_hint">請輸入密碼</string>
	<string name="confirm_password_error">密碼輸入不一致</string>
	<string name="duplicate_phone">電話號碼重覆註冊，如有問題請聯絡客服電話「(02)2225-4066」</string>
	<string name="disable_account_message">帳號停用中，請洽客服人員</string>

	<!-- forget password -->
	<string name="id_hint">輸入身份證字號</string>
	<string name="account_hint">輸入手機號碼</string>
	<string name="id_error">身份證字號錯誤</string>
	<string name="send_password">密碼簡訊至 %1$s</string>
	<string name="resend_password">密碼簡訊已重送</string>

	<!-- menu_profile -->
	<string name="member_level">會員等級</string>
	<string name="evaluation_level">評價等級</string>
	<string name="name">姓名</string>
	<string name="id">身份證字號</string>
	<string name="nationals_id">本國人身份證</string>
	<string name="foreigner_id">居留證</string>
	<string name="address">住址</string>
	<string name="email">E-mail</string>
	<string name="working_location">理想工作地點</string>
	<string name="bank_code">銀行代號</string>
	<string name="bank_account">銀行帳號</string>
	<string name="gender">性別</string>
	<string name="select_gender">選擇性別</string>
	<string name="birthday">生日</string>
	<string name="save">儲存</string>
	<string name="skip">略過</string>
	<string name="finish">完成</string>
	<string name="modify">修改</string>
	<string name="male">男</string>
	<string name="female">女</string>
	<string name="name_empty">姓名不得為空</string>
	<string name="id_empty">身份證字號不得為空</string>
	<string name="address_empty">住址不得為空</string>
	<string name="email_empty">E-mail不得為空</string>
	<string name="nationals_id_error">身份證字號格式不正確</string>
	<string name="foreigner_id_error">居留證格式不正確</string>
	<string name="save_failed">儲存失敗</string>
	<string name="gallery">由圖片庫匯入</string>
	<string name="take_picture">拍張照片</string>
	<string name="avatar_upload_title">上傳頭像</string>
	<string name="photo_upload_success">照片上傳成功</string>
	<string name="photo_upload_failed">照片上傳失敗了</string>
	<string name="please_wait">等待中&#8230;</string>
	<string name="skip_profile">如果沒有輸入基本資料，無法找工作唷</string>
	<string name="mandatory">必填</string>
	<string name="all_area">全區</string>

	<!-- work list -->
	<string name="my_work_list">我的工作</string>
	<string name="all_work_list">所有工作</string>
	<string name="booking_work_list">我有空</string>
	<string name="following_work_list">追蹤中</string>
	<string name="history_work_list">歷史工作</string>
	<string name="work_list">工作列表</string>
	<string name="search_hint">搜尋工作</string>
	<string name="work_list_hour">過去24小時</string>
	<string name="work_list_city">台北市</string>
	<string name="advanced_search">進階搜尋</string>
	<string name="daily_wage">日薪</string>
	<string name="hourly">時薪</string>
	<string name="money">金額</string>
	<string name="remove_follow">是否確定刪除</string>
	<string name="history_over">超過工作天數60天，不提供檢視工作明細</string>
	<string name="search_all">不限</string>

	<!-- work detail -->
	<string name="work_title">工作內容</string>
	<string name="work_type">工作類別</string>
	<string name="work_time">工作時間</string>
	<string name="work_place">工作地點</string>
	<string name="work_context">工作內容</string>
	<string name="work_need_number">需求人數 / 已徵得人數</string>
	<string name="work_have_meals">有無供餐</string>
	<string name="work_payroll_day">薪資發放日</string>
	<string name="work_company_name">公司名稱</string>
	<string name="work_contact_person">聯絡人</string>
	<string name="work_contact_person_phone">聯絡電話</string>
	<string name="work_follow">加入追蹤</string>
	<string name="work_date">%1$s %2$s ~ %3$s</string>
	<string name="work_need_people">%1$s / %2$s 人</string>
	<string name="yes">有</string>
	<string name="no">無</string>
	<string name="work_money">%1$s元</string>

	<!-- menu_profile -->
	<string name="profile_title">基本資料</string>

	<!-- setting -->
	<string name="setting_title">設定</string>
	<string name="notification">通知</string>
	<string name="modify_account">帳號修改</string>
	<string name="modify_password">密碼修改</string>
	<string name="profile">基本資料</string>
	<string name="logout">登出</string>
	<string name="modify_account_message">如需修改帳號\n請洽客服人員</string>

	<string name="question">常見問題</string>
	<string name="call_phone">播打電話</string>
	<string name="send_mail">寄送E-MAIL</string>
	<string name="question_link">問與答點我</string>
	<string name="about">關於享工作</string>
	<string name="about_join_worker">享工作 Join worker</string>
	<string name="version">版本號碼</string>
	<string name="company_info">公司資訊</string>
	<string name="company_name">承新國際管理顧問股份有限公司</string>
	<string name="company_phone">(02)2225-4066</string>

	<string name="profile_message">填寫基本資料後才可以瀏覽工作內容</string>

	<!-- search -->
	<string name="search_title">進階搜尋</string>
	<string name="search_keyword">關鍵字</string>
	<string name="search_pay">薪資</string>
	<string name="search_work_place">工作地點</string>
	<string name="search_work_time">工作時間</string>
	<string name="search_work_type">工作類別</string>
	<string name="search">立即搜尋</string>
	<string name="search_city_hint">請選擇</string>
	<string name="search_area_hint">請選擇</string>
	<string name="search_work_type_hint">請選擇</string>
	<string name="clear">清除</string>

	<!-- modify password -->
	<string name="modify_password_hint">請輸入密碼</string>
	<string name="modify_new_password_hint">請輸入新密碼，須大於6字元</string>
	<string name="modify_check_new_password_hint">確認新密碼</string>
	<string name="modify_password_success">密碼修改成功</string>

	<!-- Force Update -->
	<string name="version_update_message">「享工作 - 顧主」 已有新版本%s，是否立即更新？</string>
	<string name="version_update_text">立即更新</string>
	<string name="version_do_not_text">現在不要</string>
	<string name="force_update_message">已有新版本！請立即更新到%s</string>
	<string name="force_update_text">更新</string>
	<string name="force_exit_text">離開</string>
	<string name="market_url">market://details?id=%s</string>
	<string name="market_web_url">http://play.google.com/store/apps/details?id=%s</string>
</resources>
