<?xml version="1.0" encoding="UTF-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
				android:layout_width="match_parent"
				android:layout_height="match_parent"
				android:background="@color/background_color">

	<include
			android:id="@+id/toolbar"
			layout="@layout/layout_toolbar"/>

	<RelativeLayout
			android:id="@+id/layout_person_default"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_margin="16dp"
			android:layout_centerHorizontal="true"
			android:layout_below="@id/toolbar">

		<ImageView
				android:id="@+id/login_icon_default"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_centerHorizontal="true"
				android:src="@drawable/ic_person_default"
				/>

		<View
				android:layout_width="match_parent"
				android:layout_height="1dp"
				android:background="#e2dbd9"
				android:layout_marginLeft="25dp"
				android:layout_centerVertical="true"
				android:layout_toLeftOf="@id/login_icon_default"/>

		<View
				android:layout_width="match_parent"
				android:layout_height="1dp"
				android:background="#e2dbd9"
				android:layout_marginRight="25dp"
				android:layout_centerVertical="true"
				android:layout_toRightOf="@id/login_icon_default"/>
	</RelativeLayout>

	<EditText
			android:id="@+id/login_edit_account"
			android:layout_width="match_parent"
			android:layout_height="52dp"
			android:layout_marginLeft="25dp"
			android:layout_marginRight="25dp"
			android:hint="@string/account"
			android:textColor="@color/gray"
			android:paddingLeft="16dp"
			android:paddingRight="16dp"
			android:drawableRight="@drawable/ic_mobile"
			android:background="@color/white"
			android:textSize="18sp"
			android:layout_below="@id/layout_person_default"/>

	<View
			android:id="@+id/edit_line"
			android:layout_width="match_parent"
			android:layout_height="1dp"
			android:layout_below="@id/login_edit_account"
			android:layout_marginRight="25dp"
			android:layout_marginLeft="25dp"
			android:background="@color/edit_line_color"/>

	<EditText
			android:id="@+id/login_edit_password"
			android:layout_width="match_parent"
			android:layout_height="52dp"
			android:layout_marginLeft="25dp"
			android:layout_marginRight="25dp"
			android:hint="@string/password"
			android:textColor="@color/gray"
			android:paddingLeft="16dp"
			android:paddingRight="16dp"
			android:drawableRight="@drawable/ic_password"
			android:background="@color/white"
			android:textSize="18sp"
			android:inputType="textPassword"
			android:layout_below="@id/edit_line"/>

	<Button
			android:id="@+id/login_submit_button"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:background="@drawable/button_orange"
			android:layout_below="@id/login_edit_password"
			android:layout_marginRight="25dp"
			android:layout_marginLeft="25dp"
			android:layout_marginTop="17dp"
			android:text="@string/login"
			android:textColor="@color/white"
			android:textSize="22dp"/>

	<TextView
			android:id="@+id/login_sign_in"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_below="@id/login_submit_button"
			android:layout_alignLeft="@id/login_submit_button"
			android:layout_marginTop="12dp"
			android:text="@string/sign_in"
			android:textColor="@color/text_gray"
			android:textSize="14sp"/>

	<TextView
			android:id="@+id/login_forget_password"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_below="@id/login_submit_button"
			android:layout_alignRight="@id/login_submit_button"
			android:layout_marginTop="12dp"
			android:text="@string/forget_password"
			android:textColor="@color/text_gray"
			android:textSize="14dp"/>

	<Button
			android:id="@+id/facebook_login_button"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:background="@drawable/button_facebook"
			android:layout_below="@id/login_forget_password"
			android:layout_marginTop="33dp"
			android:layout_marginRight="25dp"
			android:layout_marginLeft="25dp"
			android:paddingRight="8dp"
			android:text="@string/facebook"
			android:textColor="@color/white"
			android:textSize="22dp"/>
</RelativeLayout>