<?xml version="1.0" encoding="UTF-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
				android:layout_width="match_parent"
				android:layout_height="match_parent"
				android:background="@color/background_color">

	<View
			android:id="@+id/view_line"
			android:layout_width="match_parent"
			android:layout_height="1dp"
			android:background="@color/white"/>

	<RelativeLayout
			android:id="@+id/layout_search"
			android:layout_width="wrap_content"
			android:layout_height="42dp"
			android:layout_below="@id/view_line"
			android:background="@color/title_background_orange"
			android:layout_centerHorizontal="true">
		<EditText
				android:id="@+id/edit_search"
				android:layout_width="match_parent"
				android:layout_height="38dp"
				android:drawableRight="@drawable/button_search"
				android:drawablePadding="2dp"
				android:layout_marginLeft="16dp"
				android:layout_toLeftOf="@+id/button_advanced_search"
				android:hint="@string/search_hint"
				android:paddingLeft="16dp"
				android:paddingRight="2dp"
				android:textSize="15sp"
				android:textColor="@color/text_search"
				android:background="@drawable/bg_white_round_corner"
				android:layout_centerInParent="true"/>

		<TextView
				android:id="@+id/button_advanced_search"
				android:layout_width="wrap_content"
				android:layout_height="match_parent"
				android:layout_marginLeft="16dp"
				android:layout_marginRight="16dp"
				android:layout_alignParentRight="true"
				android:gravity="center"
				android:textSize="16sp"
				android:textColor="@color/white"
				android:text="@string/advanced_search"/>
	</RelativeLayout>

	<LinearLayout
			android:id="@+id/layout_button"
			android:layout_width="match_parent"
			android:layout_height="58dp"
			android:layout_below="@id/layout_search"
			android:orientation="horizontal">
		<TextView
				android:id="@+id/button_time"
				android:layout_width="0dp"
				android:layout_height="match_parent"
				android:layout_weight="0.5"
				android:background="@color/work_list_button_filter"
				android:gravity="center"
				android:text="@string/work_list_hour"
				android:textSize="18sp"
				android:textColor="@color/text_work_list_filter"/>

		<View
				android:layout_width="1dp"
				android:layout_height="match_parent"
				android:background="#bdbdbd"/>

		<TextView
				android:id="@+id/button_city"
				android:layout_width="0dp"
				android:layout_height="match_parent"
				android:layout_weight="0.5"
				android:background="@color/work_list_button_filter"
				android:gravity="center"
				android:text="@string/work_list_city"
				android:textSize="18sp"
				android:textColor="@color/text_work_list_filter"/>

	</LinearLayout>

	<!--<android.support.v7.widget.RecyclerView-->
	<!--android:layout_width="match_parent"-->
	<!--android:layout_height="match_parent"-->
	<!--android:layout_below="@id/layout_button"-->
	<!--android:layout_above="@+id/group_tab"/>-->
	<RelativeLayout
			android:id="@+id/layout_tmp"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_below="@id/layout_button">

		<include layout="@layout/item_work_list"/>
	</RelativeLayout>

	<RelativeLayout
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_below="@id/layout_tmp">

		<include layout="@layout/item_work_list_tmp"/>
	</RelativeLayout>

</RelativeLayout>
