<?xml version="1.0" encoding="UTF-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
				android:layout_width="match_parent"
				android:layout_height="match_parent"
				android:background="@color/background_color">

	<include layout="@layout/layout_toolbar"/>

	<ScrollView
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			android:layout_below="@+id/toolbar">

		<RelativeLayout
				android:layout_width="match_parent"
				android:layout_height="match_parent">

			<EditText
					android:id="@+id/edit_id"
					android:layout_width="match_parent"
					android:layout_height="52dp"
					android:textCursorDrawable="@null"
					android:digits="0123456789abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ"
					android:maxLength="12"
					android:freezesText="true"
					android:singleLine="true"
					android:inputType="text"
					android:imeOptions="actionNext"
					android:paddingRight="17dp"
					android:paddingLeft="17dp"
					android:layout_marginTop="18dp"
					android:layout_marginLeft="25dp"
					android:layout_marginRight="25dp"
					android:background="@color/white"
					android:gravity="center_vertical"
					android:layout_gravity="center"
					android:hint="@string/id_hint"
					android:textColor="@color/text_gray_deep"
					android:textSize="18sp"/>

			<EditText
					android:id="@+id/edit_phone_no"
					android:layout_width="match_parent"
					android:layout_height="52dp"
					android:textCursorDrawable="@null"
					android:digits="0123456789"
					android:maxLength="80"
					android:layout_below="@+id/edit_id"
					android:freezesText="true"
					android:singleLine="true"
					android:inputType="phone"
					android:imeOptions="actionDone"
					android:background="@color/white"
					android:paddingRight="17dp"
					android:paddingLeft="17dp"
					android:layout_marginTop="18dp"
					android:layout_marginLeft="25dp"
					android:layout_marginRight="25dp"
					android:gravity="center_vertical"
					android:layout_gravity="center"
					android:hint="@string/account_hint"
					android:textColor="@color/text_gray_deep"
					android:textSize="18sp"/>

			<Button
					android:id="@+id/button_submit"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:layout_marginRight="25dp"
					android:layout_marginLeft="25dp"
					android:background="@drawable/bg_gray_round_corner"
					android:layout_below="@+id/edit_phone_no"
					android:text="@string/register_complete"
					android:textColor="@color/white"
					android:textSize="22sp"
					android:layout_marginTop="18dp"/>

		</RelativeLayout>
	</ScrollView>
</RelativeLayout>
